Fix: Tooltips should not render blurry in LoDPI environments. Closes ckeditor/ckeditor5#1802.

--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-ui/components/tooltip/tooltip.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-ui/components/tooltip/tooltip.css
@@ -12,6 +12,12 @@
 .ck.ck-tooltip {
 	left: 50%;
 
+	/*
+	 * Prevent blurry tooltips in LoDPI environments.
+	 * See https://github.com/ckeditor/ckeditor5/issues/1802.
+	 */
+	top: 0;
+
 	/**
 	 * A class once applied displays the tooltip south of the element.
 	 *
